--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>I AM PENUGONDA SAI VENKATA AKASH FROM CSE-B</h1>
     <h4> I CHANGED THE WHOLE WORLD TO MAKE IT IS A TECHNOLOGICAL ONE </h4>
+    <h3>HELLO ALL WE HAVE TO LEARN THE NEW SKILLS </h3>
 </body>
 </html>
